# tsg-assessment

./: README.md  main.py  pyproject.toml  requirements.txt
downloader/: __init__.py  __main__.py  interface.py  main.py
downloader/downloaders/: civicclerk.py  facebook.py  generic.py  utils.py  youtube.py  zoom.py
scraper/: __init__.py  __main__.py  interface.py  main.py  models.py
scraper/scrapers/: civicclerk.py  facebook.py  lansdale.py  utils.py  youtube.py
